#--------------------------------------------------
# find MPI
#--------------------------------------------------
find_package(MPI REQUIRED)

#--------------------------------------------------
# setup tests
#--------------------------------------------------
set(TEST_C_SRCS
  send_recv
  #send_recv_libfabric
  ping_pong_dep
  #  custom_computation
  ping_pong_schedule
  allreduce
  allreduce_inplace
  allreduce_buffers_user_managed
  allreduce_buffers_user_managed_inplace
  allreduce_buffers_fflib_managed
  allreduce_buffers_fflib_managed_inplace
)

if(FFLIB_HAVE_LIBFABRIC) 
  set(TEST_C_SRCS ${TEST_C_SRCS}
    ping_pong_sched_libfabric
  )
endif()

set(TEST_CPP_SRCS
)

include_directories(${MPI_C_INCLUDE_PATH})
message("include_directories(${MPI_INCLUDE_PATH})")

foreach(test ${TEST_C_SRCS})
  add_executable(${test} ${test}.c)
  target_include_directories(${test} PRIVATE ${PROJECT_SOURCE_DIR}/src)
  target_link_libraries(${test} fflib)
endforeach()

foreach(test ${TEST_CPP_SRCS})
  add_executable(${test} ${test}.cpp)
  target_include_directories(${test} PRIVATE ${PROJECT_SOURCE_DIR}/src)
  target_link_libraries(${test} fflib)
endforeach()


